attached_assets/Pasted--rest-express-1-0-0-test-FAIL-server-tests-webhook-routes-test-ts-Test-suite-failed-to-run--1744320376614.txt

> rest-express@1.0.0 test
 FAIL  server/tests/webhook-routes.test.ts
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/workspace/server/core/sync-manager.ts:49
        constructor() {
        ^^^^^^^^^^^

    SyntaxError: A class may only have one constructor

    > 1 | import { SyncManager } from '../core/sync-manager';
        | ^
      2 |
      3 | export async function runDailySync() {
      4 |   try {

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1505:14)
      at Object.<anonymous> (server/webhooks/daily-sync.ts:1:1)
      at Object.<anonymous> (server/webhooks/webhook-routes.ts:3:1)
      at Object.<anonymous> (server/tests/webhook-routes.test.ts:5:1)

 FAIL  server/tests/webhook-handler.test.ts
  ● Console

    console.log
      Database connection initialized

      at Object.<anonymous> (server/db.ts:16:9)

    console.log
      Database connection initialized

      at Object.<anonymous> (server/db.ts:16:9)

    console.error
      Error processing Bandsintown webhook: NeonDbError: null value in column "city" of relation "venues" violates not-null constraint
          at execute (/home/runner/workspace/node_modules/@neondatabase/serverless/index.js:1559:55)
          at processTicksAndRejections (node:internal/process/task_queues:95:5)
          at NeonHttpPreparedQuery.execute (/home/runner/workspace/node_modules/src/neon-http/session.ts:68:18)
          at processBandsintownEventWebhook (/home/runner/workspace/server/webhooks/webhook-handler.ts:115:26)
          at Object.<anonymous> (/home/runner/workspace/server/tests/webhook-handler.test.ts:23:5) {
        severity: 'ERROR',
        code: '23502',
        detail: 'Failing row contains (173, Test Venue, null, US, 500, null, null, null, null, null, Venue from Bandsintown webhook: Test Venue in undefined, null, 1, 2025-04-10 21:26:04.624449, null, null).',
        hint: undefined,
        position: undefined,
        internalPosition: undefined,
        internalQuery: undefined,
        where: undefined,
        schema: 'public',
        table: 'venues',
        column: 'city',
        dataType: undefined,
        constraint: undefined,
        file: 'execMain.c',
        line: '2006',
        routine: 'ExecConstraints',
        sourceError: undefined
      }

      228 |     console.log(`Successfully processed ${event_type} webhook`);
      229 |   } catch (error) {
    > 230 |     console.error('Error processing Bandsintown webhook:', error);
          |             ^
      231 |     throw error;
      232 |   }
      233 | }

      at processBandsintownEventWebhook (server/webhooks/webhook-handler.ts:230:13)
      at Object.<anonymous> (server/tests/webhook-handler.test.ts:23:5)

    console.error
      Error processing Bandsintown webhook: TypeError: Cannot read properties of undefined (reading 'name')
          at processBandsintownEventWebhook (/home/runner/workspace/server/webhooks/webhook-handler.ts:92:85)
          at Object.<anonymous> (/home/runner/workspace/server/tests/webhook-handler.test.ts:32:48)
          at Promise.then.completed (/home/runner/workspace/node_modules/jest-circus/build/utils.js:298:28)
          at new Promise (<anonymous>)
          at callAsyncCircusFn (/home/runner/workspace/node_modules/jest-circus/build/utils.js:231:10)
          at _callCircusTest (/home/runner/workspace/node_modules/jest-circus/build/run.js:316:40)
          at processTicksAndRejections (node:internal/process/task_queues:95:5)
          at _runTest (/home/runner/workspace/node_modules/jest-circus/build/run.js:252:3)
          at _runTestsForDescribeBlock (/home/runner/workspace/node_modules/jest-circus/build/run.js:126:9)
          at _runTestsForDescribeBlock (/home/runner/workspace/node_modules/jest-circus/build/run.js:121:9)
          at run (/home/runner/workspace/node_modules/jest-circus/build/run.js:71:3)
          at runAndTransformResultsToJestFormat (/home/runner/workspace/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:122:21)
          at jestAdapter (/home/runner/workspace/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
          at runTestInternal (/home/runner/workspace/node_modules/jest-runner/build/runTest.js:367:16)
          at runTest (/home/runner/workspace/node_modules/jest-runner/build/runTest.js:444:34)
          at Object.worker (/home/runner/workspace/node_modules/jest-runner/build/testWorker.js:106:12)

      228 |     console.log(`Successfully processed ${event_type} webhook`);
      229 |   } catch (error) {
    > 230 |     console.error('Error processing Bandsintown webhook:', error);
          |             ^
      231 |     throw error;
      232 |   }
      233 | }

      at processBandsintownEventWebhook (server/webhooks/webhook-handler.ts:230:13)
      at Object.<anonymous> (server/tests/webhook-handler.test.ts:32:48)

  ● Webhook Handler › should process a valid Bandsintown event webhook

    expect(received).resolves.not.toThrow()

    Received promise rejected instead of resolved
    Rejected to value: [NeonDbError: null value in column "city" of relation "venues" violates not-null constraint]

      21 |     };
      22 |
    > 23 |     await expect(processBandsintownEventWebhook(mockPayload)).resolves.not.toThrow();
         |                 ^
      24 |   });
      25 |
      26 |   it('should handle missing data gracefully', async () => {

      at expect (node_modules/expect/build/index.js:113:15)
      at Object.<anonymous> (server/tests/webhook-handler.test.ts:23:17)

  ● Webhook Handler › should handle missing data gracefully

    expect(received).resolves.not.toThrow()

    Received promise rejected instead of resolved
    Rejected to value: [TypeError: Cannot read properties of undefined (reading 'name')]

      30 |     };
      31 |
    > 32 |     await expect(processBandsintownEventWebhook(mockPayload)).resolves.not.toThrow();
         |                 ^
      33 |   });
      34 | });
      35 |

      at expect (node_modules/expect/build/index.js:113:15)
      at Object.<anonymous> (server/tests/webhook-handler.test.ts:32:17)

Test Suites: 2 failed, 2 total
Tests:       2 failed, 2 total
Snapshots:   0 total
Time:        2.354 s
Ran all test suites.